crates/toml_edit/fixtures/invalid/integer/trailing-us-hex.stderr
TOML parse error at line 1, column 23
  |
1 | trailing-us-hex = 0x1_
  |                       ^
Invalid hexadecimal integer
Expected digit
